--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.2
   flutter_riverpod: ^2.5.1
   freezed_annotation:
+  url_launcher: ^6.3.0
+  cached_network_image: ^3.4.0
 
 dev_dependencies:
   flutter_test:
