--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cached_network_image: ^3.4.0
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter 
   flutter_test:
     sdk: flutter
 
